<?xml version="1.0"?>
<package format="2">
  <name>spiral</name>
  <version>0.0.1</version>
  <description>The lidar manipulator spiral package</description>

  <maintainer email="your_email@example.com">your_name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_filters</build_depend> 
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
